sort.basic.shell.AlgShellSort.scala.error
Compilation error:
AlgShellSort: error: not found: value shellSort
		shellSort();
                ^AlgShellSort:9: error: value asInt is not a member of Int
   var ecart:Int = lgr/2.asInt
                         ^AlgShellSort:18: error: value ecart is not a member of Int
        copie(i-j*ecart,i+(1-j)ecart)
                               ^AlgShellSort:23: error: value ecart is not a member of Int
        setValeur(i-(j+1)ecart, v)
                         ^AlgShellSort:27: error: value asDouble is not a member of Int
    ecart=(ecart.asDouble/2).asInt
                 ^